# girls-talk

./: .env.local.example  .gitignore  CLAUDE.md
.claude/skills/deploy/: SKILL.md
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: VTuberView.module.css  VTuberView.tsx
frontend/src/hooks/: useVTuberConversation.ts
frontend/src/types/: vtuber.ts
girlstalk/: AGENTS.md  README.md
girlstalk/agentcore/: agentcore.json  aws-targets.json
girlstalk/agentcore/.cli/: deployed-state.json
girlstalk/agentcore/.llm-context/: README.md  agentcore.ts  aws-targets.ts
girlstalk/agentcore/cdk/: cdk.json  package-lock.json  package.json
girlstalk/agentcore/cdk/lib/: cdk-stack.ts
girlstalk/agentcore/cdk/test/: cdk.test.ts
girlstalk/app/GirlsTalsAgent/: main.py  pyproject.toml
girlstalk/app/GirlsTalsAgent/memory/: session.py
infra/: main.tf  outputs.tf  variables.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
lambda/: agentcore_memory_client.py  bedrock_client.py  dynamodb_client.py  handler.py  seed_handler.py  vtuber_handler.py  vtuber_seed.py
